--- a/Parcial/public/confirmarReserva.html
+++ b/Parcial/public/confirmarReserva.html
@@ -288,7 +288,7 @@
           // Hacer una solicitud para obtener los datos de la reserva
           fetch('/confirmarReserva', {
               method: 'GET',
-              credentials: 'include' // Asegúrate de incluir las cookies
+              credentials: 'include' // Inhcluir cookies
           })
           .then(response => {
               if (!response.ok) {
